// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioBorderedBoxField should render correctly 1`] = `
<DocumentFragment>
  .cache-v5olil {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 8px;
}

.cache-xraa6j {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-xraa6j[aria-disabled='false'] {
  cursor: pointer;
}

.cache-xraa6j:hover[aria-disabled='false'] .e1duuirp1[id=test-test]+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-xraa6j:hover[aria-disabled='false'] .e1duuirp1[id=test-test]+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-xraa6j:hover[aria-disabled='false'] .e1duuirp1[id=test-test][aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-xraa6j:hover[aria-disabled='false'] .e1duuirp1[id=test-test][aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-xraa6j[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-xraa6j[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-xraa6j[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-xraa6j:hover,
.cache-xraa6j:focus-within,
.cache-xraa6j:active {
  border: 1px solid #4f0599;
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-dhqfi {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-dhqfi+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-dhqfi[aria-checked='true']+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-dhqfi[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-dhqfi[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-dhqfi:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-dhqfi:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-dhqfi[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-dhqfi[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-jsk10b {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-jsk10b .e1duuirp4 {
  fill: #ffffff;
}

.cache-1e98oqk {
  fill: #ffffff;
}

.cache-1eoy87d {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.cache-kszmvz {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0 8px;
}

.cache-1ix8lmw {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<form
    novalidate=""
  >
    <div
      class="cache-v5olil e13z6rra0"
    >
      <label
        aria-disabled="false"
        class="ejleepd0 cache-xraa6j e1duuirp0"
        data-checked="false"
        for="test-test"
      >
        <input
          aria-checked="false"
          aria-disabled="false"
          aria-invalid="false"
          class="cache-dhqfi e1duuirp1"
          id="test-test"
          name="test"
          tabindex="0"
          type="radio"
          value="test"
        />
        <svg
          class="cache-jsk10b e1duuirp2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="8"
              stroke-width="2"
            />
            <circle
              class="cache-1e98oqk e1duuirp4"
              cx="12"
              cy="12"
              r="6"
            />
            <circle
              class="cache-0 e1duuirp3"
              cx="12"
              cy="12"
              r="4"
            />
          </g>
        </svg>
        <div
          class="cache-v5olil e13z6rra0"
        >
          <div
            class="cache-1eoy87d e13z6rra2"
          >
            <div
              class="cache-kszmvz e13z6rra3"
            >
              Choice 1
            </div>
          </div>
          <p
            class="cache-1ix8lmw e1tg3t120"
          >
            Radio field
          </p>
        </div>
      </label>
    </div>
  </form>
</DocumentFragment>
`;

exports[`RadioBorderedBoxField should render correctly checked 1`] = `
<DocumentFragment>
  .cache-v5olil {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 8px;
}

.cache-v9yscr {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  border: 1px solid #4f0599;
  color: #4f0599;
}

.cache-v9yscr[aria-disabled='false'] {
  cursor: pointer;
}

.cache-v9yscr:hover[aria-disabled='false'] .e1duuirp1[id=test-checked]+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-v9yscr:hover[aria-disabled='false'] .e1duuirp1[id=test-checked]+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-v9yscr:hover[aria-disabled='false'] .e1duuirp1[id=test-checked][aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-v9yscr:hover[aria-disabled='false'] .e1duuirp1[id=test-checked][aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-v9yscr[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-v9yscr[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-v9yscr[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-v9yscr:hover,
.cache-v9yscr:focus-within,
.cache-v9yscr:active {
  border: 1px solid #4f0599;
  box-shadow: none;
}

.cache-dhqfi {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-dhqfi+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-dhqfi[aria-checked='true']+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-dhqfi[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-dhqfi[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-dhqfi:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-dhqfi:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-dhqfi[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-dhqfi[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-jsk10b {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-jsk10b .e1duuirp4 {
  fill: #ffffff;
}

.cache-1e98oqk {
  fill: #ffffff;
}

.cache-1eoy87d {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.cache-kszmvz {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0 8px;
}

.cache-1ix8lmw {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<form
    novalidate=""
  >
    <div
      class="cache-v5olil e13z6rra0"
    >
      <label
        aria-disabled="false"
        class="ejleepd0 cache-v9yscr e1duuirp0"
        data-checked="true"
        for="test-checked"
      >
        <input
          aria-checked="true"
          aria-disabled="false"
          aria-invalid="false"
          checked=""
          class="cache-dhqfi e1duuirp1"
          id="test-checked"
          name="test"
          tabindex="0"
          type="radio"
          value="checked"
        />
        <svg
          class="cache-jsk10b e1duuirp2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="8"
              stroke-width="2"
            />
            <circle
              class="cache-1e98oqk e1duuirp4"
              cx="12"
              cy="12"
              r="6"
            />
            <circle
              class="cache-0 e1duuirp3"
              cx="12"
              cy="12"
              r="4"
            />
          </g>
        </svg>
        <div
          class="cache-v5olil e13z6rra0"
        >
          <div
            class="cache-1eoy87d e13z6rra2"
          >
            <div
              class="cache-kszmvz e13z6rra3"
            >
              Choice 1
            </div>
          </div>
          <p
            class="cache-1ix8lmw e1tg3t120"
          >
            Radio field checked
          </p>
        </div>
      </label>
    </div>
  </form>
</DocumentFragment>
`;

exports[`RadioBorderedBoxField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-v5olil {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 8px;
}

.cache-1l9sfa5 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
}

.cache-1l9sfa5[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1l9sfa5:hover[aria-disabled='false'] .e1duuirp1[id=test-disabled]+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1l9sfa5:hover[aria-disabled='false'] .e1duuirp1[id=test-disabled]+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-1l9sfa5:hover[aria-disabled='false'] .e1duuirp1[id=test-disabled][aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1l9sfa5:hover[aria-disabled='false'] .e1duuirp1[id=test-disabled][aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-1l9sfa5[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1l9sfa5[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-1l9sfa5[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-dhqfi {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-dhqfi+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-dhqfi[aria-checked='true']+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-dhqfi[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-dhqfi[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-dhqfi:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-dhqfi:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-dhqfi[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-dhqfi[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-jsk10b {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-jsk10b .e1duuirp4 {
  fill: #ffffff;
}

.cache-1e98oqk {
  fill: #ffffff;
}

.cache-1eoy87d {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.cache-kszmvz {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0 8px;
}

.cache-xpzdy4 {
  color: #c4c9d6;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<form
    novalidate=""
  >
    <div
      class="cache-v5olil e13z6rra0"
    >
      <label
        aria-disabled="true"
        class="ejleepd0 cache-1l9sfa5 e1duuirp0"
        data-checked="false"
        for="test-disabled"
      >
        <input
          aria-checked="false"
          aria-disabled="true"
          aria-invalid="false"
          class="cache-dhqfi e1duuirp1"
          disabled=""
          id="test-disabled"
          name="test"
          style="pointer-events: none;"
          type="radio"
          value="disabled"
        />
        <svg
          class="cache-jsk10b e1duuirp2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="8"
              stroke-width="2"
            />
            <circle
              class="cache-1e98oqk e1duuirp4"
              cx="12"
              cy="12"
              r="6"
            />
            <circle
              class="cache-0 e1duuirp3"
              cx="12"
              cy="12"
              r="4"
            />
          </g>
        </svg>
        <div
          class="cache-v5olil e13z6rra0"
        >
          <div
            class="cache-1eoy87d e13z6rra2"
          >
            <div
              class="cache-kszmvz e13z6rra3"
            >
              Choice 1
            </div>
          </div>
          <p
            class="cache-xpzdy4 e1tg3t120"
          >
            Radio field disabled
          </p>
        </div>
      </label>
    </div>
  </form>
</DocumentFragment>
`;

exports[`RadioBorderedBoxField should render correctly with errors 1`] = `
<DocumentFragment>
  .cache-v5olil {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 8px;
}

.cache-fcusmn {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  border: 1px solid #a6102d;
  color: #a6102d;
}

.cache-fcusmn[aria-disabled='false'] {
  cursor: pointer;
}

.cache-fcusmn:hover[aria-disabled='false'] .e1duuirp1[id=test-checked]+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-fcusmn:hover[aria-disabled='false'] .e1duuirp1[id=test-checked]+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-fcusmn:hover[aria-disabled='false'] .e1duuirp1[id=test-checked][aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-fcusmn:hover[aria-disabled='false'] .e1duuirp1[id=test-checked][aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-fcusmn[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-fcusmn[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-fcusmn[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-dhqfi {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-dhqfi+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-dhqfi[aria-checked='true']+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-dhqfi[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-dhqfi[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-dhqfi:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-dhqfi:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-dhqfi[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-dhqfi[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-jsk10b {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-jsk10b .e1duuirp4 {
  fill: #ffffff;
}

.cache-1e98oqk {
  fill: #ffffff;
}

.cache-1eoy87d {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.cache-kszmvz {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0 8px;
}

.cache-1ix8lmw {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-bnyspz {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  -webkit-transition: max-height 300ms ease-in,opacity 300ms ease-in;
  transition: max-height 300ms ease-in,opacity 300ms ease-in;
  max-height: 5000px;
  opacity: 1;
  overflow: visible;
}

.cache-j5wde4 {
  font-size: 12px;
  color: #a6102d;
}

<form
    novalidate=""
  >
    <div
      class="cache-v5olil e13z6rra0"
    >
      <label
        aria-disabled="false"
        class="ejleepd0 cache-fcusmn e1duuirp0"
        data-checked="false"
        for="test-checked"
      >
        <input
          aria-checked="false"
          aria-disabled="false"
          aria-invalid="true"
          class="cache-dhqfi e1duuirp1"
          id="test-checked"
          name="test"
          tabindex="0"
          type="radio"
          value="checked"
        />
        <svg
          class="cache-jsk10b e1duuirp2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="8"
              stroke-width="2"
            />
            <circle
              class="cache-1e98oqk e1duuirp4"
              cx="12"
              cy="12"
              r="6"
            />
            <circle
              class="cache-0 e1duuirp3"
              cx="12"
              cy="12"
              r="4"
            />
          </g>
        </svg>
        <div
          class="cache-v5olil e13z6rra0"
        >
          <div
            class="cache-1eoy87d e13z6rra2"
          >
            <div
              class="cache-kszmvz e13z6rra3"
            >
              Choice 1
            </div>
          </div>
          <p
            class="cache-1ix8lmw e1tg3t120"
          >
            Radio field error
          </p>
        </div>
      </label>
      <div
        class="e14o3tsk0 cache-bnyspz"
      >
        <div
          class="cache-j5wde4 e13z6rra1"
        >
          This field is required
        </div>
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`RadioBorderedBoxField should trigger events correctly 1`] = `
<DocumentFragment>
  .cache-v5olil {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 8px;
}

.cache-1hm10q1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  border: 1px solid #4f0599;
  color: #4f0599;
}

.cache-1hm10q1[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1hm10q1:hover[aria-disabled='false'] .e1duuirp1[id=test-events]+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1hm10q1:hover[aria-disabled='false'] .e1duuirp1[id=test-events]+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-1hm10q1:hover[aria-disabled='false'] .e1duuirp1[id=test-events][aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1hm10q1:hover[aria-disabled='false'] .e1duuirp1[id=test-events][aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-1hm10q1[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1hm10q1[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-1hm10q1[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-1hm10q1:hover,
.cache-1hm10q1:focus-within,
.cache-1hm10q1:active {
  border: 1px solid #4f0599;
  box-shadow: none;
}

.cache-dhqfi {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-dhqfi+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-dhqfi[aria-checked='true']+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-dhqfi[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-dhqfi[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-dhqfi:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-dhqfi:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-dhqfi[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-dhqfi[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-jsk10b {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-jsk10b .e1duuirp4 {
  fill: #ffffff;
}

.cache-1e98oqk {
  fill: #ffffff;
}

.cache-1eoy87d {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.cache-kszmvz {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0 8px;
}

.cache-1ix8lmw {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<form
    novalidate=""
  >
    <div
      class="cache-v5olil e13z6rra0"
    >
      <label
        aria-disabled="false"
        class="ejleepd0 cache-1hm10q1 e1duuirp0"
        data-checked="true"
        for="test-events"
      >
        <input
          aria-checked="true"
          aria-disabled="false"
          aria-invalid="false"
          class="cache-dhqfi e1duuirp1"
          id="test-events"
          name="test"
          tabindex="0"
          type="radio"
          value="events"
        />
        <svg
          class="cache-jsk10b e1duuirp2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="8"
              stroke-width="2"
            />
            <circle
              class="cache-1e98oqk e1duuirp4"
              cx="12"
              cy="12"
              r="6"
            />
            <circle
              class="cache-0 e1duuirp3"
              cx="12"
              cy="12"
              r="4"
            />
          </g>
        </svg>
        <div
          class="cache-v5olil e13z6rra0"
        >
          <div
            class="cache-1eoy87d e13z6rra2"
          >
            <div
              class="cache-kszmvz e13z6rra3"
            >
              Choice 1
            </div>
          </div>
          <p
            class="cache-1ix8lmw e1tg3t120"
          >
            Radio field events
          </p>
        </div>
      </label>
    </div>
  </form>
</DocumentFragment>
`;
